2002-04-30  Jochen Wiedmann  <joe@ispsoft.de> (0.2015)

	* Makefile.PL: Removed dbimon and pmysql from
	  the EXE_FILES list. Andreas Koenig
	  <andreas.koenig@anima.de>

2002-04-17  Jochen Wiedmann  <joe@ispsoft.de> (2.1014)

	* dbdimp.c: Fixed mysql_is_auto_increment.
	  Paul Walmsley <shag-dbdmysql@booyaka.com> and
	  Paul Dubois <paul@kitebird.org>

2002-04-12  Jochen Wiedmann  <joe@ispsoft.de> (2.1013)

	* dbdimp.c: Added use of mysql_ssl_set.
	  Chris Hanes <chanes@i-c.net>

2002-04-12  Jochen Wiedmann  <joe@ispsoft.de> (2.1012)

	* Some fixes in the docs. Paul Dubois <paul@kitebird.com>
	* Added mysql_is_auto_increment. (Someone else, but forgot
	  his email, sorry!)

2002-02-12  Jochen Wiedmann  <joe@ispsoft.de> (2.1011)

        * Makefile.PL: DBI::DBD is no longer loaded by
          default, to allow CPAN's requirements detection
          note and install a missing DBI.

2001-12-28  Jochen Wiedmann  <joe@ispsoft.de> (2.1010)

	* Bumped version number in Mysql/Statement.pm to
	  1.24, so that it is always higher than that 
	  from the Msql-Mysql-modules.
	

2001-12-28  Jochen Wiedmann  <joe@ispsoft.de> (2.1008)

	* lib/DBD/mysql.pod: Fixed minor bug in an example.

2001-12-27  Jochen Wiedmann  <joe@ispsoft.de> (2.1007)

	* Bumped version number in Mysql.pm to 1.24, so that
	  it is always higher than that from the Msql-Mysql-
	  modules.

2001-12-27  Jochen Wiedmann  <joe@ispsoft.de> (2.1006)

	* Within AutoCommit mode, reconnect is now turned
	  off, because the transaction state is unpredictable
	  otherwise.

2001-12-13  Jochen Wiedmann  <joe@ispsoft.de> (2.1005)

	* dbdimp.c: Added use of SvMAGICAL to dbd_db_quote.
	  Rudy Lippan <almighty@randomc.com>

2001-11-13  Jochen Wiedmann  <joe@ispsoft.de> (2.1004)

	* Makefile.PL: Fixed handling of --testdb, --testuser, ...

2001-11-05  Jochen Wiedmann  <joe@ispsoft.de> (2.1003)

	* bind_param now using mysql_real_escape_string
	  as well. Dave Rolsky <autarch@urth.org>
